--- a/TP/TP_LattardMathis/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/TP/TP_LattardMathis/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -127,8 +127,8 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettin
 [MRU]
 MRUItem0=/Game/Levels/bootstrap
 MRUItem1=/Game/Levels/Level_01
-MRUItem2=/Game/Levels/Level_03
-MRUItem3=/Game/Levels/Level_02
+MRUItem2=/Game/Levels/Level_02
+MRUItem3=/Game/Levels/Level_03
 MRUItem4=/Game/Levels/Level_Gym
 MRUItem5=/Game/__StarterContent/Maps/Minimal_Default
 
@@ -174,8 +174,8 @@ DataValidationSettings=EditorStyleSettings.Graphs.Preview,EditorKeyboardShortcut
 GameplayDebuggerUserSettings=EditorStyleSettings.Graphs.Preview,EditorKeyboardShortcutSettings.EditorViewport.ShowTextureResolution,EditorKeyboardShortcutSettings.EditorViewport.ShowTextureScale,EditorKeyboardShortcutSettings.LevelEditor.OpenFavoriteFile,EditorKeyboardShortcutSettings.LevelEditor.OpenRecentFile,
 GameplayTagsDeveloperSettings=EditorStyleSettings.Graphs.Preview,EditorKeyboardShortcutSettings.EditorViewport.ShowTextureResolution,EditorKeyboardShortcutSettings.EditorViewport.ShowTextureScale,EditorKeyboardShortcutSettings.LevelEditor.OpenFavoriteFile,EditorKeyboardShortcutSettings.LevelEditor.OpenRecentFile,
 LogVisualizerSettings=EditorStyleSettings.Graphs.Preview,EditorKeyboardShortcutSettings.EditorViewport.ShowTextureResolution,EditorKeyboardShortcutSettings.EditorViewport.ShowTextureScale,EditorKeyboardShortcutSettings.LevelEditor.OpenFavoriteFile,EditorKeyboardShortcutSettings.LevelEditor.OpenRecentFile,
-BP_Player_C=BP_Player_C.Physics.ConstraintsGroup,BP_Player_C.Rendering.TextureStreaming,BP_Player_C.Rendering.LOD,BP_Player_C.Rendering.RayTracing,EdGraph.Inputs.InputArgument0,EdGraph.Inputs.InputArgument1,BP_Player_C.Collision.Collision,StaticMeshActor.Rendering.TextureStreaming,PropertyWrapper.DefaultValueCategory.None,
-CapsuleComponent=
+BP_Player_C=
+CapsuleComponent=BP_Player_C.Physics.ConstraintsGroup,BP_Player_C.Rendering.TextureStreaming,BP_Player_C.Rendering.LOD,BP_Player_C.Rendering.RayTracing,EdGraph.Inputs.InputArgument0,EdGraph.Inputs.InputArgument1,BP_Player_C.Collision.Collision,StaticMeshActor.Rendering.TextureStreaming,PropertyWrapper.DefaultValueCategory.None,
 CryptoKeysSettings=InputSettings.Bindings.AxisMappings.NewAxisMapping_0,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Jump,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.Move_Forward,InputSettings.Bindings.AxisMappings.Move_Right,InputSettings.Bindings.AxisMappings.Aim_Vertical,InputSettings.Bindings.AxisMappings.Aim_Horizontal,GameMapsSettings.DefaultModes.SelectedGameModeDetails,IOSRuntimeSettings.Build.Remote Build Options,InputSettings.Bindings.ActionMappings.Dash,InputSettings.Bindings.ActionMappings.GravityGun_Grab,InputSettings.Bindings.ActionMappings.GravityGun_Throw,
 GeneralProjectSettings=InputSettings.Bindings.AxisMappings.NewAxisMapping_0,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Jump,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.Move_Forward,InputSettings.Bindings.AxisMappings.Move_Right,InputSettings.Bindings.AxisMappings.Aim_Vertical,InputSettings.Bindings.AxisMappings.Aim_Horizontal,GameMapsSettings.DefaultModes.SelectedGameModeDetails,IOSRuntimeSettings.Build.Remote Build Options,InputSettings.Bindings.ActionMappings.Dash,InputSettings.Bindings.ActionMappings.GravityGun_Grab,InputSettings.Bindings.ActionMappings.GravityGun_Throw,
 GameplayTagsSettings=InputSettings.Bindings.AxisMappings.NewAxisMapping_0,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Jump,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.Move_Forward,InputSettings.Bindings.AxisMappings.Move_Right,InputSettings.Bindings.AxisMappings.Aim_Vertical,InputSettings.Bindings.AxisMappings.Aim_Horizontal,GameMapsSettings.DefaultModes.SelectedGameModeDetails,IOSRuntimeSettings.Build.Remote Build Options,InputSettings.Bindings.ActionMappings.Dash,InputSettings.Bindings.ActionMappings.GravityGun_Grab,InputSettings.Bindings.ActionMappings.GravityGun_Throw,
@@ -253,7 +253,7 @@ PropertyWrapper=BP_Player_C.Physics.ConstraintsGroup,BP_Player_C.Rendering.Textu
 K2Node_VariableGet=BP_Player_C.Physics.ConstraintsGroup,BP_Player_C.Rendering.TextureStreaming,BP_Player_C.Rendering.LOD,BP_Player_C.Rendering.RayTracing,EdGraph.Inputs.InputArgument0,EdGraph.Inputs.InputArgument1,BP_Player_C.Collision.Collision,StaticMeshActor.Rendering.TextureStreaming,PropertyWrapper.DefaultValueCategory.None,
 BP_PlayerController_C=
 K2Node_VariableSet=BP_Player_C.Physics.ConstraintsGroup,BP_Player_C.Rendering.TextureStreaming,BP_Player_C.Rendering.LOD,BP_Player_C.Rendering.RayTracing,EdGraph.Inputs.InputArgument0,EdGraph.Inputs.InputArgument1,BP_Player_C.Collision.Collision,StaticMeshActor.Rendering.TextureStreaming,PropertyWrapper.DefaultValueCategory.None,
-SceneComponent=BP_Player_C.Physics.ConstraintsGroup,BP_Player_C.Rendering.TextureStreaming,BP_Player_C.Rendering.LOD,BP_Player_C.Rendering.RayTracing,EdGraph.Inputs.InputArgument0,EdGraph.Inputs.InputArgument1,BP_Player_C.Collision.Collision,StaticMeshActor.Rendering.TextureStreaming,PropertyWrapper.DefaultValueCategory.None,
+SceneComponent=
 SkeletalMeshComponent=
 UpdateAiming_8=BP_Player_C.Physics.ConstraintsGroup,BP_Player_C.Rendering.TextureStreaming,BP_Player_C.Rendering.LOD,BP_Player_C.Rendering.RayTracing,
 UpdateAiming=BP_Player_C.Physics.ConstraintsGroup,BP_Player_C.Rendering.TextureStreaming,BP_Player_C.Rendering.LOD,BP_Player_C.Rendering.RayTracing,
@@ -278,22 +278,24 @@ ActivatePhysics=BP_Player_C.Physics.ConstraintsGroup,BP_Player_C.Rendering.Textu
 BP_Explosion_C=
 BP_ExplosiveBarrel_C=BP_Player_C.Physics.ConstraintsGroup,BP_Player_C.Rendering.TextureStreaming,BP_Player_C.Rendering.LOD,BP_Player_C.Rendering.RayTracing,StaticMeshActor.Rendering.TextureStreaming,EdGraph.Inputs.InputArgument0,EdGraph.Inputs.InputArgument1,BP_Player_C.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,
 BP_StickyPlatform_C=
-BP_GameFlowManager_C=
+BP_GameFlowManager_C=BP_Player_C.Physics.ConstraintsGroup,BP_Player_C.Rendering.TextureStreaming,BP_Player_C.Rendering.LOD,BP_Player_C.Rendering.RayTracing,EdGraph.Inputs.InputArgument0,EdGraph.Inputs.InputArgument1,BP_Player_C.Collision.Collision,StaticMeshActor.Rendering.TextureStreaming,PropertyWrapper.DefaultValueCategory.None,
 WBP_GameFlowUI_C=
 SetupEndUI_4=BP_Player_C.Physics.ConstraintsGroup,BP_Player_C.Rendering.TextureStreaming,BP_Player_C.Rendering.LOD,BP_Player_C.Rendering.RayTracing,EdGraph.Inputs.InputArgument0,EdGraph.Inputs.InputArgument1,BP_Player_C.Collision.Collision,StaticMeshActor.Rendering.TextureStreaming,PropertyWrapper.DefaultValueCategory.None,
 SetupEndUI=BP_Player_C.Physics.ConstraintsGroup,BP_Player_C.Rendering.TextureStreaming,BP_Player_C.Rendering.LOD,BP_Player_C.Rendering.RayTracing,EdGraph.Inputs.InputArgument0,EdGraph.Inputs.InputArgument1,BP_Player_C.Collision.Collision,StaticMeshActor.Rendering.TextureStreaming,PropertyWrapper.DefaultValueCategory.None,
 ToDoubleDigits_5=BP_Player_C.Physics.ConstraintsGroup,BP_Player_C.Rendering.TextureStreaming,BP_Player_C.Rendering.LOD,BP_Player_C.Rendering.RayTracing,EdGraph.Inputs.InputArgument0,EdGraph.Inputs.InputArgument1,BP_Player_C.Collision.Collision,StaticMeshActor.Rendering.TextureStreaming,PropertyWrapper.DefaultValueCategory.None,
 ToDoubleDigits=BP_Player_C.Physics.ConstraintsGroup,BP_Player_C.Rendering.TextureStreaming,BP_Player_C.Rendering.LOD,BP_Player_C.Rendering.RayTracing,EdGraph.Inputs.InputArgument0,EdGraph.Inputs.InputArgument1,BP_Player_C.Collision.Collision,StaticMeshActor.Rendering.TextureStreaming,PropertyWrapper.DefaultValueCategory.None,
 PlayerController=EdGraph.Inputs.InputArgument0,EdGraph.Inputs.InputArgument1,
+StaticMeshComponent=StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,
 
 [EditorStartup]
 LastLevel=/Game/Levels/Bootstrap
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 OpenAssetsAtExit=/Game/_Core/BP_GameFlowManager.BP_GameFlowManager
 OpenAssetsAtExit=/Game/_Core/_Widgets/WBP_GameFlowUI.WBP_GameFlowUI
 OpenAssetsAtExit=/Game/Player/BP_Player.BP_Player
+OpenAssetsAtExit=/Game/_Core/BP_StartPosition.BP_StartPosition
 
 [DetailCategories]
 EditorStyleSettings.Colors=True
@@ -788,11 +790,11 @@ BP_Player_C.Camera=True
 BP_Player_C.Pawn=True
 BP_Player_C.Replication=False
 BP_Player_C.Rendering=True
-BP_Player_C.Collision=True
+BP_Player_C.Collision=False
 BP_Player_C.Actor=True
 BP_Player_C.Input=False
 BP_Player_C.WorldPartition=True
-BP_Player_C.HLOD=True
+BP_Player_C.HLOD=False
 EdGraph.Graph=True
 EdGraph.Inputs=True
 EdGraph.Outputs=True
@@ -1293,6 +1295,26 @@ K2Node_FormatText.Arguments=True
 BP_GameFlowManager_C.LOD=True
 BP_GameFlowManager_C.Cooking=True
 BP_GameFlowManager_C.DataLayers=True
+K2Node_CustomEvent.GraphNodeDetail=True
+K2Node_CustomEvent.Graph=True
+K2Node_CustomEvent.Inputs=True
+HUD.Collision=True
+BP_StartPosition_C.TransformCommon=True
+StaticMeshComponent.HLOD=False
+StaticMeshComponent.Mobile=False
+CapsuleComponent.Variable=True
+CapsuleComponent.TransformCommon=True
+CapsuleComponent.Sockets=True
+CapsuleComponent.Shape=True
+CapsuleComponent.Navigation=True
+CapsuleComponent.ComponentTick=True
+CapsuleComponent.Physics=True
+CapsuleComponent.Collision=True
+CapsuleComponent.Rendering=True
+CapsuleComponent.Tags=True
+CapsuleComponent.ComponentReplication=True
+CapsuleComponent.Cooking=True
+CapsuleComponent.Events=True
 
 [DetailMultiObjectNodeExpansion]
 EditorStyleSettings=True
@@ -1442,8 +1464,8 @@ MagicLeapARPinSettings="\"Object.ARPin.OnUpdatedEventTriggerDelta\" "
 NiagaraSettings="\"Object.Renderer.ComponentRendererWarningsPerClass\" "
 NiagaraEditorSettings="\"Object.Niagara.GraphCreationShortcuts\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[0]\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[0].Input\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[1]\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[1].Input\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[2]\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[2].Input\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[3]\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[3].Input\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[4]\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[4].Input\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[5]\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[5].Input\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[6]\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[6].Input\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[7]\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[7].Input\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[8]\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[8].Input\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[9]\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[9].Input\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[10]\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[10].Input\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[11]\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[11].Input\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[12]\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[12].Input\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[13]\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[13].Input\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[14]\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[14].Input\" "
 BoxComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
-ShapeComponent=
-PrimitiveComponent=
+ShapeComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+PrimitiveComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 StaticMeshComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 MeshComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 StaticMeshActor="\"Object.StaticMeshActor.StaticMeshComponent.Object.Lighting.LightmassSettings\" "
@@ -1460,7 +1482,7 @@ MaterialExpression="\"Object.DefaultValue\" "
 BP_Explosion_C="\"Object.Lifespan\" "
 MaterialExpressionScalarParameter="\"Object.DefaultValue\" "
 BP_ExplosiveBarrel_C=
-BP_GameFlowManager_C="\"Object.Levels\" "
+BP_GameFlowManager_C="\"Object.Game Flow Manager .Game Flow Manager |Cached Variables\" \"Object.Game Flow Manager .Game Flow Manager |Cached Variables.Levels\" "
 Image="\"Object.Appearance.Brush\" "
 Widget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" "
 Visual="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" "
@@ -1475,6 +1497,7 @@ SetupEndUI_4="\"Struct.L_mainColor\" "
 SetupEndUI=
 ToDoubleDigits_5="\"Struct.L_integerString\" "
 ToDoubleDigits=
+CapsuleComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 
 [ContentBrowser]
 ContentBrowserDrawer.SourcesExpanded=True
@@ -1520,7 +1543,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game/_Core/_Widgets
+ContentBrowserTab1.SelectedPaths=/Game/Levels
 ContentBrowserTab1.Favorites.SelectedPaths=
 ContentBrowserTab1.SelectedCollections=
 ContentBrowserTab1.ExpandedCollections=
@@ -1529,13 +1552,13 @@ ContentBrowserTab1.CurrentViewType=1
 
 [ContentBrowserRecent]
 MRUItem0=/Game/Levels/bootstrap
-MRUItem1=/Game/Player/BP_Player
-MRUItem2=/Game/_Core/_Widgets/WBP_GameFlowUI
-MRUItem3=/Game/_Core/BP_GameFlowManager
-MRUItem4=/Game/Levels/Level_01
-MRUItem5=/Game/_Core/BP_StartPosition
-MRUItem6=/Game/Levels/Level_03
-MRUItem7=/Game/Levels/Level_02
+MRUItem1=/Game/Levels/Level_01
+MRUItem2=/Game/_Core/BP_StartPosition
+MRUItem3=/Game/Levels/Level_03
+MRUItem4=/Game/Levels/Level_02
+MRUItem5=/Game/Player/BP_Player
+MRUItem6=/Game/_Core/_Widgets/WBP_GameFlowUI
+MRUItem7=/Game/_Core/BP_GameFlowManager
 MRUItem8=/Game/Levels/Level_Gym
 MRUItem9=/Game/_Core/_Data/_Material/M_StartPosition
 MRUItem10=/Game/_Core/_Enums/EGameState
@@ -1620,6 +1643,7 @@ bShowBookmarksForCurrentDocumentOnlyInTab=False
 GraphEditorQuickJumps=()
 
 [PlacementMode]
+RecentlyPlaced=/Game/_Core/BP_StartPosition.BP_StartPosition;
 RecentlyPlaced=/Game/_Core/BP_GameFlowManager.BP_GameFlowManager;
 RecentlyPlaced=/Game/Player/BP_Player.BP_Player;
 RecentlyPlaced=/Game/LDis/GravityTargets/BP_ExplosiveBarrel.BP_ExplosiveBarrel;
@@ -2546,6 +2570,8 @@ SequencerWidgets.TimeStamp=2021.11.30-15.20.52
 SequencerWidgets.LastCompileMethod=Unknown
 NewLevelDialog.TimeStamp=2021.11.30-15.20.17
 NewLevelDialog.LastCompileMethod=Unknown
+WorldBrowser.TimeStamp=2021.11.30-15.21.30
+WorldBrowser.LastCompileMethod=Unknown
 
 [MessageLog]
 LastLogListing=PIE
@@ -2620,6 +2646,7 @@ bMaterialQualityUsed[3]=0
 [SuppressableDialogs]
 ChangeVariableType_Warning=False
 DeleteVariableInUse_Warning=False
+RemoveLevelWarning=False
 
 [WidgetTemplatesExpanded]
 Editor=False
@@ -2695,4 +2722,8 @@ bCompileDirectorOnEvaluate=False
 TrajectoryPathCap=250
 bShowOutlinerInfoColumn=True
 FrameNumberDisplayFormat=Seconds
+
+[WorldBrowser]
+DisplayPaths=False
+DisplayActorsCount=False
 
