--- a/TP/TP_LattardMathis/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/TP/TP_LattardMathis/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -278,7 +278,7 @@ ActivatePhysics=BP_Player_C.Physics.ConstraintsGroup,BP_Player_C.Rendering.Textu
 BP_Explosion_C=
 BP_ExplosiveBarrel_C=BP_Player_C.Physics.ConstraintsGroup,BP_Player_C.Rendering.TextureStreaming,BP_Player_C.Rendering.LOD,BP_Player_C.Rendering.RayTracing,StaticMeshActor.Rendering.TextureStreaming,EdGraph.Inputs.InputArgument0,EdGraph.Inputs.InputArgument1,BP_Player_C.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,
 BP_StickyPlatform_C=
-BP_GameFlowManager_C=BP_Player_C.Physics.ConstraintsGroup,BP_Player_C.Rendering.TextureStreaming,BP_Player_C.Rendering.LOD,BP_Player_C.Rendering.RayTracing,EdGraph.Inputs.InputArgument0,EdGraph.Inputs.InputArgument1,BP_Player_C.Collision.Collision,StaticMeshActor.Rendering.TextureStreaming,PropertyWrapper.DefaultValueCategory.None,
+BP_GameFlowManager_C=EdGraph.Inputs.InputArgument0,EdGraph.Inputs.InputArgument1,
 WBP_GameFlowUI_C=
 SetupEndUI_4=BP_Player_C.Physics.ConstraintsGroup,BP_Player_C.Rendering.TextureStreaming,BP_Player_C.Rendering.LOD,BP_Player_C.Rendering.RayTracing,EdGraph.Inputs.InputArgument0,EdGraph.Inputs.InputArgument1,BP_Player_C.Collision.Collision,StaticMeshActor.Rendering.TextureStreaming,PropertyWrapper.DefaultValueCategory.None,
 SetupEndUI=BP_Player_C.Physics.ConstraintsGroup,BP_Player_C.Rendering.TextureStreaming,BP_Player_C.Rendering.LOD,BP_Player_C.Rendering.RayTracing,EdGraph.Inputs.InputArgument0,EdGraph.Inputs.InputArgument1,BP_Player_C.Collision.Collision,StaticMeshActor.Rendering.TextureStreaming,PropertyWrapper.DefaultValueCategory.None,
@@ -286,16 +286,21 @@ ToDoubleDigits_5=BP_Player_C.Physics.ConstraintsGroup,BP_Player_C.Rendering.Text
 ToDoubleDigits=BP_Player_C.Physics.ConstraintsGroup,BP_Player_C.Rendering.TextureStreaming,BP_Player_C.Rendering.LOD,BP_Player_C.Rendering.RayTracing,EdGraph.Inputs.InputArgument0,EdGraph.Inputs.InputArgument1,BP_Player_C.Collision.Collision,StaticMeshActor.Rendering.TextureStreaming,PropertyWrapper.DefaultValueCategory.None,
 PlayerController=EdGraph.Inputs.InputArgument0,EdGraph.Inputs.InputArgument1,
 StaticMeshComponent=StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,
+BP_ObjectiveManager_C=EdGraph.Inputs.InputArgument0,EdGraph.Inputs.InputArgument1,
+WBP_ObjectiveUI_C=EdGraph.Inputs.InputArgument0,EdGraph.Inputs.InputArgument1,
+UserDefinedStruct=UserDefinedStruct.Structure.9FF0C2A94F321A0308EBD68677967733,
 
 [EditorStartup]
 LastLevel=/Game/Levels/Bootstrap
 
 [AssetEditorSubsystem]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/_Core/BP_GameFlowManager.BP_GameFlowManager
-OpenAssetsAtExit=/Game/_Core/_Widgets/WBP_GameFlowUI.WBP_GameFlowUI
 OpenAssetsAtExit=/Game/Player/BP_Player.BP_Player
-OpenAssetsAtExit=/Game/_Core/BP_StartPosition.BP_StartPosition
+OpenAssetsAtExit=/Game/_Core/BP_GameFlowManager.BP_GameFlowManager
+OpenAssetsAtExit=/Game/Objectives/_Structs/FObjectiveData.FObjectiveData
+OpenAssetsAtExit=/Game/Objectives/_Enums/EObjectiveManagerState.EObjectiveManagerState
+OpenAssetsAtExit=/Game/Objectives/BP_ObjectiveManager.BP_ObjectiveManager
+OpenAssetsAtExit=/Game/Objectives/_Widgets/WBP_ObjectiveUI.WBP_ObjectiveUI
 
 [DetailCategories]
 EditorStyleSettings.Colors=True
@@ -1287,7 +1292,7 @@ WBP_GameFlowUI_C.Clipping=True
 WBP_GameFlowUI_C.Navigation=True
 WBP_GameFlowUI_C.Localization=True
 BP_GameFlowManager_C.Default=True
-BP_GameFlowManager_C.Game Flow Manager =True
+BP_GameFlowManager_C.Game Flow Manager=True
 WBP_GameFlowUI_C.Default=True
 WBP_GameFlowUI_C.Designer=True
 WBP_GameFlowUI_C.Layout=True
@@ -1315,6 +1320,35 @@ CapsuleComponent.Tags=True
 CapsuleComponent.ComponentReplication=True
 CapsuleComponent.Cooking=True
 CapsuleComponent.Events=True
+BP_GameFlowManager_C.Game Flow Manager =True
+UserDefinedStruct.Structure=True
+UserDefinedStruct.DefaultValues=True
+BP_ObjectiveManager_C.Tick=True
+BP_ObjectiveManager_C.Replication=True
+BP_ObjectiveManager_C.Rendering=True
+BP_ObjectiveManager_C.Collision=True
+BP_ObjectiveManager_C.Actor=True
+BP_ObjectiveManager_C.Input=True
+BP_ObjectiveManager_C.WorldPartition=True
+BP_ObjectiveManager_C.HLOD=True
+HorizontalBox.Layout=True
+HorizontalBox.Behavior=True
+HorizontalBox.Accessibility=True
+HorizontalBox.Render Transform=True
+HorizontalBox.Performance=True
+HorizontalBox.Clipping=True
+HorizontalBox.Navigation=True
+HorizontalBox.Localization=True
+Spacer.Layout=True
+Spacer.Appearance=True
+Spacer.Accessibility=True
+Spacer.Behavior=True
+Spacer.Render Transform=True
+Spacer.Performance=True
+Spacer.Clipping=True
+Spacer.Navigation=True
+Spacer.Localization=True
+CanvasPanel.Layout=True
 
 [DetailMultiObjectNodeExpansion]
 EditorStyleSettings=True
@@ -1429,8 +1463,8 @@ Character=
 Pawn=
 InputSettings="\"Object.Bindings.AxisConfig\" \"Object.Bindings.ActionMappings.ActionMappings[3]\" \"Object.Bindings.AxisMappings.AxisMappings[0]\" \"Object.Bindings.AxisMappings.AxisMappings[1]\" \"Object.Bindings.AxisMappings.AxisMappings[2]\" \"Object.Bindings.AxisMappings.AxisMappings[3]\" \"Object.Bindings.AxisMappings.AxisMappings[4]\" \"Object.Bindings.AxisMappings.AxisMappings[5]\" \"Object.Console.ConsoleKeys\" "
 CameraComponent="\"Object.PostProcess.PostProcessSettings\" "
-SceneComponent=
-ActorComponent=
+SceneComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+ActorComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 BP_PlayerController_C=
 PlayerController=
 Controller=
@@ -1466,8 +1500,8 @@ NiagaraEditorSettings="\"Object.Niagara.GraphCreationShortcuts\" \"Object.Niagar
 BoxComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 ShapeComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 PrimitiveComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
-StaticMeshComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
-MeshComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+StaticMeshComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+MeshComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 StaticMeshActor="\"Object.StaticMeshActor.StaticMeshComponent.Object.Lighting.LightmassSettings\" "
 BP_GravityTargetBase_C=
 BPC_GravityGun_C=
@@ -1482,22 +1516,25 @@ MaterialExpression="\"Object.DefaultValue\" "
 BP_Explosion_C="\"Object.Lifespan\" "
 MaterialExpressionScalarParameter="\"Object.DefaultValue\" "
 BP_ExplosiveBarrel_C=
-BP_GameFlowManager_C="\"Object.Game Flow Manager .Game Flow Manager |Cached Variables\" \"Object.Game Flow Manager .Game Flow Manager |Cached Variables.Levels\" "
+BP_GameFlowManager_C=
 Image="\"Object.Appearance.Brush\" "
-Widget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" "
-Visual="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" "
+Widget=
+Visual=
 TextBlock="\"Object.Appearance.Font\" "
 TextLayoutWidget="\"Object.Appearance.Font\" "
 Button="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" "
 ContentWidget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" "
-PanelWidget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" "
+PanelWidget=
 WBP_GameFlowUI_C=
-UserWidget=
+UserWidget="\"Object.ColorDefault\" "
 SetupEndUI_4="\"Struct.L_mainColor\" "
 SetupEndUI=
 ToDoubleDigits_5="\"Struct.L_integerString\" "
 ToDoubleDigits=
 CapsuleComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+BP_ObjectiveManager_C="\"Object.ObjectiveUIRef\" "
+HorizontalBox="\"Object.Layout.Slot.Object.Layout.Layout|Canvas Slot.LayoutData.Anchors\" \"Object.Layout.Slot.Object.Layout.Layout|Canvas Slot.LayoutData.Alignment\" "
+WBP_ObjectiveUI_C="\"Object.ColorDefault\" "
 
 [ContentBrowser]
 ContentBrowserDrawer.SourcesExpanded=True
@@ -1543,7 +1580,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game/Levels
+ContentBrowserTab1.SelectedPaths=/Game/Objectives/_Widgets
 ContentBrowserTab1.Favorites.SelectedPaths=
 ContentBrowserTab1.SelectedCollections=
 ContentBrowserTab1.ExpandedCollections=
@@ -1551,26 +1588,26 @@ ContentBrowserTab1.ThumbnailSize=2
 ContentBrowserTab1.CurrentViewType=1
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Levels/bootstrap
-MRUItem1=/Game/Levels/Level_01
-MRUItem2=/Game/_Core/BP_StartPosition
-MRUItem3=/Game/Levels/Level_03
-MRUItem4=/Game/Levels/Level_02
-MRUItem5=/Game/Player/BP_Player
-MRUItem6=/Game/_Core/_Widgets/WBP_GameFlowUI
-MRUItem7=/Game/_Core/BP_GameFlowManager
-MRUItem8=/Game/Levels/Level_Gym
-MRUItem9=/Game/_Core/_Data/_Material/M_StartPosition
-MRUItem10=/Game/_Core/_Enums/EGameState
-MRUItem11=/Game/LDis/GravityTargets/BP_StickyPlatform
-MRUItem12=/Game/LDis/GravityTargets/_Data/Materials/M_StickyPlatform
-MRUItem13=/Niagara/DefaultAssets/S_Arrow
-MRUItem14=/Game/LDis/GravityTargets/NewNiagaraSystem
-MRUItem15=/Game/LDis/GravityTargets/NewNiagaraEffectType
-MRUItem16=/Game/LDis/GravityTargets/_Data/Materials/M_Explosion
-MRUItem17=/Game/LDis/GravityTargets/NewNiagaraScript
-MRUItem18=/Game/LDis/GravityTargets/BP_ExplosiveBarrel
-MRUItem19=/Game/LDis/GravityTargets/_Data/Materials/M_ExplosionBarrel
+MRUItem0=/Game/Objectives/_Widgets/WBP_ObjectiveUI
+MRUItem1=/Game/Objectives/BP_ObjectiveManager
+MRUItem2=/Game/Objectives/_Enums/EObjectiveManagerState
+MRUItem3=/Game/Objectives/_Structs/FObjectiveData
+MRUItem4=/Game/Levels/bootstrap
+MRUItem5=/Game/_Core/BP_GameFlowManager
+MRUItem6=/Game/Player/BP_Player
+MRUItem7=/Game/Levels/Level_01
+MRUItem8=/Game/_Core/BP_StartPosition
+MRUItem9=/Game/Levels/Level_03
+MRUItem10=/Game/Levels/Level_02
+MRUItem11=/Game/_Core/_Widgets/WBP_GameFlowUI
+MRUItem12=/Game/Levels/Level_Gym
+MRUItem13=/Game/_Core/_Data/_Material/M_StartPosition
+MRUItem14=/Game/_Core/_Enums/EGameState
+MRUItem15=/Game/LDis/GravityTargets/BP_StickyPlatform
+MRUItem16=/Game/LDis/GravityTargets/_Data/Materials/M_StickyPlatform
+MRUItem17=/Niagara/DefaultAssets/S_Arrow
+MRUItem18=/Game/LDis/GravityTargets/NewNiagaraSystem
+MRUItem19=/Game/LDis/GravityTargets/NewNiagaraEffectType
 
 [AssetEditorToolkitTabLocation]
 /Game/_Core/BP_GameMode.BP_GameMode=1
@@ -1603,6 +1640,10 @@ MRUItem19=/Game/LDis/GravityTargets/_Data/Materials/M_ExplosionBarrel
 /Game/_Core/BP_GameFlowManager.BP_GameFlowManager=1
 /Game/_Core/BP_StartPosition.BP_StartPosition=1
 /Game/_Core/_Widgets/WBP_GameFlowUI.WBP_GameFlowUI=1
+/Game/Objectives/_Structs/FObjectiveData.FObjectiveData=1
+/Game/Objectives/_Enums/EObjectiveManagerState.EObjectiveManagerState=1
+/Game/Objectives/BP_ObjectiveManager.BP_ObjectiveManager=1
+/Game/Objectives/_Widgets/WBP_ObjectiveUI.WBP_ObjectiveUI=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -2660,6 +2701,7 @@ Special Effects=False
 Synth=False
 User Created=False
 Advanced=False
+Common=False
 
 [DetailCategoriesAdvanced]
 UserDefinedEnum.Enumerators=True
