--- a/TP/TP_LattardMathis/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/TP/TP_LattardMathis/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -249,10 +249,10 @@ TemplateSequenceEditorSettings=InputSettings.Bindings.AxisMappings.NewAxisMappin
 UdpMessagingSettings=InputSettings.Bindings.AxisMappings.NewAxisMapping_0,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Jump,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.Move_Forward,InputSettings.Bindings.AxisMappings.Move_Right,InputSettings.Bindings.AxisMappings.Aim_Vertical,InputSettings.Bindings.AxisMappings.Aim_Horizontal,GameMapsSettings.DefaultModes.SelectedGameModeDetails,IOSRuntimeSettings.Build.Remote Build Options,InputSettings.Bindings.ActionMappings.Dash,InputSettings.Bindings.ActionMappings.GravityGun_Grab,InputSettings.Bindings.ActionMappings.GravityGun_Throw,
 WmfMediaSettings=InputSettings.Bindings.AxisMappings.NewAxisMapping_0,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Jump,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.Move_Forward,InputSettings.Bindings.AxisMappings.Move_Right,InputSettings.Bindings.AxisMappings.Aim_Vertical,InputSettings.Bindings.AxisMappings.Aim_Horizontal,GameMapsSettings.DefaultModes.SelectedGameModeDetails,IOSRuntimeSettings.Build.Remote Build Options,InputSettings.Bindings.ActionMappings.Dash,InputSettings.Bindings.ActionMappings.GravityGun_Grab,InputSettings.Bindings.ActionMappings.GravityGun_Throw,
 CameraComponent=CameraComponent.PostProcess.Lens,
-PropertyWrapper=BP_Player_C.Physics.ConstraintsGroup,BP_Player_C.Rendering.TextureStreaming,BP_Player_C.Rendering.LOD,BP_Player_C.Rendering.RayTracing,EdGraph.Inputs.InputArgument0,EdGraph.Inputs.InputArgument1,BP_Player_C.Collision.Collision,StaticMeshActor.Rendering.TextureStreaming,PropertyWrapper.DefaultValueCategory.None,
-K2Node_VariableGet=BP_Player_C.Physics.ConstraintsGroup,BP_Player_C.Rendering.TextureStreaming,BP_Player_C.Rendering.LOD,BP_Player_C.Rendering.RayTracing,EdGraph.Inputs.InputArgument0,EdGraph.Inputs.InputArgument1,BP_Player_C.Collision.Collision,StaticMeshActor.Rendering.TextureStreaming,PropertyWrapper.DefaultValueCategory.None,
+PropertyWrapper=BP_Player_C.Physics.ConstraintsGroup,BP_Player_C.Rendering.TextureStreaming,BP_Player_C.Rendering.LOD,BP_Player_C.Rendering.RayTracing,EdGraph.Inputs.InputArgument0,EdGraph.Inputs.InputArgument1,BP_Player_C.Collision.Collision,StaticMeshActor.Rendering.TextureStreaming,PropertyWrapper.DefaultValueCategory.None,K2Node_BreakStruct.PinOptions.ShowPinForProperties,
+K2Node_VariableGet=BP_Player_C.Physics.ConstraintsGroup,BP_Player_C.Rendering.TextureStreaming,BP_Player_C.Rendering.LOD,BP_Player_C.Rendering.RayTracing,EdGraph.Inputs.InputArgument0,EdGraph.Inputs.InputArgument1,BP_Player_C.Collision.Collision,StaticMeshActor.Rendering.TextureStreaming,PropertyWrapper.DefaultValueCategory.None,K2Node_BreakStruct.PinOptions.ShowPinForProperties,
 BP_PlayerController_C=
-K2Node_VariableSet=BP_Player_C.Physics.ConstraintsGroup,BP_Player_C.Rendering.TextureStreaming,BP_Player_C.Rendering.LOD,BP_Player_C.Rendering.RayTracing,EdGraph.Inputs.InputArgument0,EdGraph.Inputs.InputArgument1,BP_Player_C.Collision.Collision,StaticMeshActor.Rendering.TextureStreaming,PropertyWrapper.DefaultValueCategory.None,
+K2Node_VariableSet=BP_Player_C.Physics.ConstraintsGroup,BP_Player_C.Rendering.TextureStreaming,BP_Player_C.Rendering.LOD,BP_Player_C.Rendering.RayTracing,EdGraph.Inputs.InputArgument0,EdGraph.Inputs.InputArgument1,BP_Player_C.Collision.Collision,StaticMeshActor.Rendering.TextureStreaming,PropertyWrapper.DefaultValueCategory.None,K2Node_BreakStruct.PinOptions.ShowPinForProperties,
 SceneComponent=
 SkeletalMeshComponent=
 UpdateAiming_8=BP_Player_C.Physics.ConstraintsGroup,BP_Player_C.Rendering.TextureStreaming,BP_Player_C.Rendering.LOD,BP_Player_C.Rendering.RayTracing,
@@ -270,7 +270,7 @@ StaticMeshActor=StaticMeshActor.Rendering.TextureStreaming,
 ApplyZoneEffect_2=BP_Player_C.Physics.ConstraintsGroup,BP_Player_C.Rendering.TextureStreaming,BP_Player_C.Rendering.LOD,BP_Player_C.Rendering.RayTracing,EdGraph.Inputs.InputArgument0,EdGraph.Inputs.InputArgument1,BP_Player_C.Collision.Collision,StaticMeshActor.Rendering.TextureStreaming,
 ApplyZoneEffect=BP_Player_C.Physics.ConstraintsGroup,BP_Player_C.Rendering.TextureStreaming,BP_Player_C.Rendering.LOD,BP_Player_C.Rendering.RayTracing,EdGraph.Inputs.InputArgument0,EdGraph.Inputs.InputArgument1,BP_Player_C.Collision.Collision,StaticMeshActor.Rendering.TextureStreaming,
 BP_CollectibleKey_C=BP_Player_C.Physics.ConstraintsGroup,BP_Player_C.Rendering.TextureStreaming,BP_Player_C.Rendering.LOD,BP_Player_C.Rendering.RayTracing,EdGraph.Inputs.InputArgument0,EdGraph.Inputs.InputArgument1,BP_Player_C.Collision.Collision,StaticMeshActor.Rendering.TextureStreaming,PropertyWrapper.DefaultValueCategory.None,
-BP_Door_C=BP_Player_C.Physics.ConstraintsGroup,BP_Player_C.Rendering.TextureStreaming,BP_Player_C.Rendering.LOD,BP_Player_C.Rendering.RayTracing,EdGraph.Inputs.InputArgument0,EdGraph.Inputs.InputArgument1,BP_Player_C.Collision.Collision,StaticMeshActor.Rendering.TextureStreaming,PropertyWrapper.DefaultValueCategory.None,
+BP_Door_C=BP_Player_C.Physics.ConstraintsGroup,BP_Player_C.Rendering.TextureStreaming,BP_Player_C.Rendering.LOD,BP_Player_C.Rendering.RayTracing,EdGraph.Inputs.InputArgument0,EdGraph.Inputs.InputArgument1,BP_Player_C.Collision.Collision,StaticMeshActor.Rendering.TextureStreaming,PropertyWrapper.DefaultValueCategory.None,K2Node_BreakStruct.PinOptions.ShowPinForProperties,
 BPC_GravityGun_C=BP_Player_C.Physics.ConstraintsGroup,BP_Player_C.Rendering.TextureStreaming,BP_Player_C.Rendering.LOD,BP_Player_C.Rendering.RayTracing,EdGraph.Inputs.InputArgument0,EdGraph.Inputs.InputArgument1,BP_Player_C.Collision.Collision,StaticMeshActor.Rendering.TextureStreaming,PropertyWrapper.DefaultValueCategory.None,
 BP_GravityTargetBase_C=
 ActivatePhysics_10=BP_Player_C.Physics.ConstraintsGroup,BP_Player_C.Rendering.TextureStreaming,BP_Player_C.Rendering.LOD,BP_Player_C.Rendering.RayTracing,EdGraph.Inputs.InputArgument0,EdGraph.Inputs.InputArgument1,BP_Player_C.Collision.Collision,StaticMeshActor.Rendering.TextureStreaming,PropertyWrapper.DefaultValueCategory.None,
@@ -286,21 +286,22 @@ ToDoubleDigits_5=BP_Player_C.Physics.ConstraintsGroup,BP_Player_C.Rendering.Text
 ToDoubleDigits=BP_Player_C.Physics.ConstraintsGroup,BP_Player_C.Rendering.TextureStreaming,BP_Player_C.Rendering.LOD,BP_Player_C.Rendering.RayTracing,EdGraph.Inputs.InputArgument0,EdGraph.Inputs.InputArgument1,BP_Player_C.Collision.Collision,StaticMeshActor.Rendering.TextureStreaming,PropertyWrapper.DefaultValueCategory.None,
 PlayerController=EdGraph.Inputs.InputArgument0,EdGraph.Inputs.InputArgument1,
 StaticMeshComponent=StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,
-BP_ObjectiveManager_C=EdGraph.Inputs.InputArgument0,EdGraph.Inputs.InputArgument1,
+BP_ObjectiveManager_C=
 WBP_ObjectiveUI_C=EdGraph.Inputs.InputArgument0,EdGraph.Inputs.InputArgument1,
 UserDefinedStruct=UserDefinedStruct.Structure.9FF0C2A94F321A0308EBD68677967733,
+K2Node_BreakStruct=K2Node_BreakStruct.PinOptions.ShowPinForProperties,
 
 [EditorStartup]
-LastLevel=/Game/Levels/Bootstrap
+LastLevel=/Game/Levels/Level_Gym
 
 [AssetEditorSubsystem]
-CleanShutdown=True
-OpenAssetsAtExit=/Game/Player/BP_Player.BP_Player
-OpenAssetsAtExit=/Game/_Core/BP_GameFlowManager.BP_GameFlowManager
-OpenAssetsAtExit=/Game/Objectives/_Structs/FObjectiveData.FObjectiveData
-OpenAssetsAtExit=/Game/Objectives/_Enums/EObjectiveManagerState.EObjectiveManagerState
-OpenAssetsAtExit=/Game/Objectives/BP_ObjectiveManager.BP_ObjectiveManager
+CleanShutdown=False
 OpenAssetsAtExit=/Game/Objectives/_Widgets/WBP_ObjectiveUI.WBP_ObjectiveUI
+OpenAssetsAtExit=/Game/Objectives/BP_ObjectiveManager.BP_ObjectiveManager
+OpenAssetsAtExit=/Game/_Core/BP_GameFlowManager.BP_GameFlowManager
+OpenAssetsAtExit=/Game/Interfaces/IObjectiveTarget.IObjectiveTarget
+OpenAssetsAtExit=/Game/LDis/Triggers/BP_Door.BP_Door
+OpenAssetsAtExit=/Game/LDis/Triggers/_Base/BP_CollectibleBase.BP_CollectibleBase
 
 [DetailCategories]
 EditorStyleSettings.Colors=True
@@ -1293,6 +1294,7 @@ WBP_GameFlowUI_C.Navigation=True
 WBP_GameFlowUI_C.Localization=True
 BP_GameFlowManager_C.Default=True
 BP_GameFlowManager_C.Game Flow Manager=True
+BP_GameFlowManager_C.Game Flow Manager=True
 WBP_GameFlowUI_C.Default=True
 WBP_GameFlowUI_C.Designer=True
 WBP_GameFlowUI_C.Layout=True
@@ -1320,7 +1322,6 @@ CapsuleComponent.Tags=True
 CapsuleComponent.ComponentReplication=True
 CapsuleComponent.Cooking=True
 CapsuleComponent.Events=True
-BP_GameFlowManager_C.Game Flow Manager =True
 UserDefinedStruct.Structure=True
 UserDefinedStruct.DefaultValues=True
 BP_ObjectiveManager_C.Tick=True
@@ -1349,6 +1350,41 @@ Spacer.Clipping=True
 Spacer.Navigation=True
 Spacer.Localization=True
 CanvasPanel.Layout=True
+WBP_ObjectiveUI_C.Default=True
+WBP_ObjectiveUI_C.Appearance=True
+WBP_ObjectiveUI_C.Designer=True
+WBP_ObjectiveUI_C.Input=True
+WBP_ObjectiveUI_C.Interaction=True
+WBP_ObjectiveUI_C.Performance=True
+WBP_ObjectiveUI_C.Layout=True
+WBP_ObjectiveUI_C.Behavior=True
+WBP_ObjectiveUI_C.Render Transform=True
+WBP_ObjectiveUI_C.Accessibility=True
+WBP_ObjectiveUI_C.Clipping=True
+WBP_ObjectiveUI_C.Navigation=True
+WBP_ObjectiveUI_C.Localization=True
+BP_ObjectiveManager_C.Objective Manager =True
+BP_ObjectiveManager_C.ObjectiveManager =True
+MovieSceneKeyStructType_0.Key=True
+BP_GameFlowManager_C.Game Flow Manager =True
+Widget.Layout=True
+Widget.Behavior=True
+Widget.Accessibility=True
+Widget.Render Transform=True
+Widget.Performance=True
+Widget.Clipping=True
+Widget.Navigation=True
+Widget.Localization=True
+K2Node_BreakStruct.PinOptions=True
+BP_CollectibleBase_C.Default=True
+BP_CollectibleBase_C.Tick=True
+BP_CollectibleBase_C.Replication=True
+BP_CollectibleBase_C.Rendering=True
+BP_CollectibleBase_C.Collision=True
+BP_CollectibleBase_C.Actor=True
+BP_CollectibleBase_C.Input=True
+BP_CollectibleBase_C.WorldPartition=True
+BP_CollectibleBase_C.HLOD=True
 
 [DetailMultiObjectNodeExpansion]
 EditorStyleSettings=True
@@ -1526,15 +1562,18 @@ Button="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal
 ContentWidget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" "
 PanelWidget=
 WBP_GameFlowUI_C=
-UserWidget="\"Object.ColorDefault\" "
+UserWidget=
 SetupEndUI_4="\"Struct.L_mainColor\" "
 SetupEndUI=
 ToDoubleDigits_5="\"Struct.L_integerString\" "
 ToDoubleDigits=
 CapsuleComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
-BP_ObjectiveManager_C="\"Object.ObjectiveUIRef\" "
-HorizontalBox="\"Object.Layout.Slot.Object.Layout.Layout|Canvas Slot.LayoutData.Anchors\" \"Object.Layout.Slot.Object.Layout.Layout|Canvas Slot.LayoutData.Alignment\" "
-WBP_ObjectiveUI_C="\"Object.ColorDefault\" "
+BP_ObjectiveManager_C=
+HorizontalBox=
+WBP_ObjectiveUI_C=
+BP_Door_C=
+BP_TriggerPlayerBase_C=
+BP_TriggerBase_C=
 
 [ContentBrowser]
 ContentBrowserDrawer.SourcesExpanded=True
@@ -1588,26 +1627,26 @@ ContentBrowserTab1.ThumbnailSize=2
 ContentBrowserTab1.CurrentViewType=1
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Objectives/_Widgets/WBP_ObjectiveUI
-MRUItem1=/Game/Objectives/BP_ObjectiveManager
-MRUItem2=/Game/Objectives/_Enums/EObjectiveManagerState
-MRUItem3=/Game/Objectives/_Structs/FObjectiveData
-MRUItem4=/Game/Levels/bootstrap
-MRUItem5=/Game/_Core/BP_GameFlowManager
-MRUItem6=/Game/Player/BP_Player
-MRUItem7=/Game/Levels/Level_01
-MRUItem8=/Game/_Core/BP_StartPosition
-MRUItem9=/Game/Levels/Level_03
-MRUItem10=/Game/Levels/Level_02
-MRUItem11=/Game/_Core/_Widgets/WBP_GameFlowUI
-MRUItem12=/Game/Levels/Level_Gym
-MRUItem13=/Game/_Core/_Data/_Material/M_StartPosition
-MRUItem14=/Game/_Core/_Enums/EGameState
-MRUItem15=/Game/LDis/GravityTargets/BP_StickyPlatform
-MRUItem16=/Game/LDis/GravityTargets/_Data/Materials/M_StickyPlatform
-MRUItem17=/Niagara/DefaultAssets/S_Arrow
-MRUItem18=/Game/LDis/GravityTargets/NewNiagaraSystem
-MRUItem19=/Game/LDis/GravityTargets/NewNiagaraEffectType
+MRUItem0=/Game/LDis/Triggers/_Base/BP_CollectibleBase
+MRUItem1=/Game/LDis/Triggers/BP_Door
+MRUItem2=/Game/Interfaces/IObjectiveTarget
+MRUItem3=/Game/_Core/BP_GameFlowManager
+MRUItem4=/Game/Objectives/BP_ObjectiveManager
+MRUItem5=/Game/Objectives/_Widgets/WBP_ObjectiveUI
+MRUItem6=/Game/Objectives/_Enums/EObjectiveManagerState
+MRUItem7=/Game/Objectives/_Structs/FObjectiveData
+MRUItem8=/Game/Levels/bootstrap
+MRUItem9=/Game/Player/BP_Player
+MRUItem10=/Game/Levels/Level_01
+MRUItem11=/Game/_Core/BP_StartPosition
+MRUItem12=/Game/Levels/Level_03
+MRUItem13=/Game/Levels/Level_02
+MRUItem14=/Game/_Core/_Widgets/WBP_GameFlowUI
+MRUItem15=/Game/Levels/Level_Gym
+MRUItem16=/Game/_Core/_Data/_Material/M_StartPosition
+MRUItem17=/Game/_Core/_Enums/EGameState
+MRUItem18=/Game/LDis/GravityTargets/BP_StickyPlatform
+MRUItem19=/Game/LDis/GravityTargets/_Data/Materials/M_StickyPlatform
 
 [AssetEditorToolkitTabLocation]
 /Game/_Core/BP_GameMode.BP_GameMode=1
