--- a/TP/TP_LattardMathis/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/TP/TP_LattardMathis/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -270,7 +270,7 @@ StaticMeshActor=StaticMeshActor.Rendering.TextureStreaming,
 ApplyZoneEffect_2=BP_Player_C.Physics.ConstraintsGroup,BP_Player_C.Rendering.TextureStreaming,BP_Player_C.Rendering.LOD,BP_Player_C.Rendering.RayTracing,EdGraph.Inputs.InputArgument0,EdGraph.Inputs.InputArgument1,BP_Player_C.Collision.Collision,StaticMeshActor.Rendering.TextureStreaming,
 ApplyZoneEffect=BP_Player_C.Physics.ConstraintsGroup,BP_Player_C.Rendering.TextureStreaming,BP_Player_C.Rendering.LOD,BP_Player_C.Rendering.RayTracing,EdGraph.Inputs.InputArgument0,EdGraph.Inputs.InputArgument1,BP_Player_C.Collision.Collision,StaticMeshActor.Rendering.TextureStreaming,
 BP_CollectibleKey_C=BP_Player_C.Physics.ConstraintsGroup,BP_Player_C.Rendering.TextureStreaming,BP_Player_C.Rendering.LOD,BP_Player_C.Rendering.RayTracing,EdGraph.Inputs.InputArgument0,EdGraph.Inputs.InputArgument1,BP_Player_C.Collision.Collision,StaticMeshActor.Rendering.TextureStreaming,PropertyWrapper.DefaultValueCategory.None,
-BP_Door_C=BP_Player_C.Physics.ConstraintsGroup,BP_Player_C.Rendering.TextureStreaming,BP_Player_C.Rendering.LOD,BP_Player_C.Rendering.RayTracing,EdGraph.Inputs.InputArgument0,EdGraph.Inputs.InputArgument1,BP_Player_C.Collision.Collision,StaticMeshActor.Rendering.TextureStreaming,PropertyWrapper.DefaultValueCategory.None,K2Node_BreakStruct.PinOptions.ShowPinForProperties,
+BP_Door_C=
 BPC_GravityGun_C=BP_Player_C.Physics.ConstraintsGroup,BP_Player_C.Rendering.TextureStreaming,BP_Player_C.Rendering.LOD,BP_Player_C.Rendering.RayTracing,EdGraph.Inputs.InputArgument0,EdGraph.Inputs.InputArgument1,BP_Player_C.Collision.Collision,StaticMeshActor.Rendering.TextureStreaming,PropertyWrapper.DefaultValueCategory.None,
 BP_GravityTargetBase_C=
 ActivatePhysics_10=BP_Player_C.Physics.ConstraintsGroup,BP_Player_C.Rendering.TextureStreaming,BP_Player_C.Rendering.LOD,BP_Player_C.Rendering.RayTracing,EdGraph.Inputs.InputArgument0,EdGraph.Inputs.InputArgument1,BP_Player_C.Collision.Collision,StaticMeshActor.Rendering.TextureStreaming,PropertyWrapper.DefaultValueCategory.None,
@@ -278,21 +278,25 @@ ActivatePhysics=BP_Player_C.Physics.ConstraintsGroup,BP_Player_C.Rendering.Textu
 BP_Explosion_C=
 BP_ExplosiveBarrel_C=BP_Player_C.Physics.ConstraintsGroup,BP_Player_C.Rendering.TextureStreaming,BP_Player_C.Rendering.LOD,BP_Player_C.Rendering.RayTracing,StaticMeshActor.Rendering.TextureStreaming,EdGraph.Inputs.InputArgument0,EdGraph.Inputs.InputArgument1,BP_Player_C.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,
 BP_StickyPlatform_C=
-BP_GameFlowManager_C=EdGraph.Inputs.InputArgument0,EdGraph.Inputs.InputArgument1,
+BP_GameFlowManager_C=BP_Player_C.Physics.ConstraintsGroup,BP_Player_C.Rendering.TextureStreaming,BP_Player_C.Rendering.LOD,BP_Player_C.Rendering.RayTracing,EdGraph.Inputs.InputArgument0,EdGraph.Inputs.InputArgument1,BP_Player_C.Collision.Collision,StaticMeshActor.Rendering.TextureStreaming,PropertyWrapper.DefaultValueCategory.None,K2Node_BreakStruct.PinOptions.ShowPinForProperties,
 WBP_GameFlowUI_C=
 SetupEndUI_4=BP_Player_C.Physics.ConstraintsGroup,BP_Player_C.Rendering.TextureStreaming,BP_Player_C.Rendering.LOD,BP_Player_C.Rendering.RayTracing,EdGraph.Inputs.InputArgument0,EdGraph.Inputs.InputArgument1,BP_Player_C.Collision.Collision,StaticMeshActor.Rendering.TextureStreaming,PropertyWrapper.DefaultValueCategory.None,
 SetupEndUI=BP_Player_C.Physics.ConstraintsGroup,BP_Player_C.Rendering.TextureStreaming,BP_Player_C.Rendering.LOD,BP_Player_C.Rendering.RayTracing,EdGraph.Inputs.InputArgument0,EdGraph.Inputs.InputArgument1,BP_Player_C.Collision.Collision,StaticMeshActor.Rendering.TextureStreaming,PropertyWrapper.DefaultValueCategory.None,
 ToDoubleDigits_5=BP_Player_C.Physics.ConstraintsGroup,BP_Player_C.Rendering.TextureStreaming,BP_Player_C.Rendering.LOD,BP_Player_C.Rendering.RayTracing,EdGraph.Inputs.InputArgument0,EdGraph.Inputs.InputArgument1,BP_Player_C.Collision.Collision,StaticMeshActor.Rendering.TextureStreaming,PropertyWrapper.DefaultValueCategory.None,
-ToDoubleDigits=BP_Player_C.Physics.ConstraintsGroup,BP_Player_C.Rendering.TextureStreaming,BP_Player_C.Rendering.LOD,BP_Player_C.Rendering.RayTracing,EdGraph.Inputs.InputArgument0,EdGraph.Inputs.InputArgument1,BP_Player_C.Collision.Collision,StaticMeshActor.Rendering.TextureStreaming,PropertyWrapper.DefaultValueCategory.None,
+ToDoubleDigits=BP_Player_C.Physics.ConstraintsGroup,BP_Player_C.Rendering.TextureStreaming,BP_Player_C.Rendering.LOD,BP_Player_C.Rendering.RayTracing,EdGraph.Inputs.InputArgument0,EdGraph.Inputs.InputArgument1,BP_Player_C.Collision.Collision,StaticMeshActor.Rendering.TextureStreaming,PropertyWrapper.DefaultValueCategory.None,K2Node_BreakStruct.PinOptions.ShowPinForProperties,
 PlayerController=EdGraph.Inputs.InputArgument0,EdGraph.Inputs.InputArgument1,
 StaticMeshComponent=StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,
 BP_ObjectiveManager_C=
-WBP_ObjectiveUI_C=EdGraph.Inputs.InputArgument0,EdGraph.Inputs.InputArgument1,
+WBP_ObjectiveUI_C=
 UserDefinedStruct=UserDefinedStruct.Structure.9FF0C2A94F321A0308EBD68677967733,
 K2Node_BreakStruct=K2Node_BreakStruct.PinOptions.ShowPinForProperties,
+BP_CollectibleBase_C=
+SetObjective_11=BP_Player_C.Physics.ConstraintsGroup,BP_Player_C.Rendering.TextureStreaming,BP_Player_C.Rendering.LOD,BP_Player_C.Rendering.RayTracing,EdGraph.Inputs.InputArgument0,EdGraph.Inputs.InputArgument1,BP_Player_C.Collision.Collision,StaticMeshActor.Rendering.TextureStreaming,PropertyWrapper.DefaultValueCategory.None,K2Node_BreakStruct.PinOptions.ShowPinForProperties,
+SetObjective=BP_Player_C.Physics.ConstraintsGroup,BP_Player_C.Rendering.TextureStreaming,BP_Player_C.Rendering.LOD,BP_Player_C.Rendering.RayTracing,EdGraph.Inputs.InputArgument0,EdGraph.Inputs.InputArgument1,BP_Player_C.Collision.Collision,StaticMeshActor.Rendering.TextureStreaming,PropertyWrapper.DefaultValueCategory.None,K2Node_BreakStruct.PinOptions.ShowPinForProperties,
+ToDoubleDigits_3=BP_Player_C.Physics.ConstraintsGroup,BP_Player_C.Rendering.TextureStreaming,BP_Player_C.Rendering.LOD,BP_Player_C.Rendering.RayTracing,EdGraph.Inputs.InputArgument0,EdGraph.Inputs.InputArgument1,BP_Player_C.Collision.Collision,StaticMeshActor.Rendering.TextureStreaming,PropertyWrapper.DefaultValueCategory.None,K2Node_BreakStruct.PinOptions.ShowPinForProperties,
 
 [EditorStartup]
-LastLevel=/Game/Levels/Level_Gym
+LastLevel=/Game/Levels/Bootstrap
 
 [AssetEditorSubsystem]
 CleanShutdown=False
@@ -302,6 +306,7 @@ OpenAssetsAtExit=/Game/_Core/BP_GameFlowManager.BP_GameFlowManager
 OpenAssetsAtExit=/Game/Interfaces/IObjectiveTarget.IObjectiveTarget
 OpenAssetsAtExit=/Game/LDis/Triggers/BP_Door.BP_Door
 OpenAssetsAtExit=/Game/LDis/Triggers/_Base/BP_CollectibleBase.BP_CollectibleBase
+OpenAssetsAtExit=/Game/LDis/Triggers/BP_Key.BP_Key
 
 [DetailCategories]
 EditorStyleSettings.Colors=True
@@ -1083,7 +1088,7 @@ BP_Door_C.Tick=True
 BP_Door_C.Replication=True
 BP_Door_C.Rendering=True
 BP_Door_C.Collision=True
-BP_Door_C.Actor=True
+BP_Door_C.Actor=False
 BP_Door_C.Input=True
 BP_Door_C.WorldPartition=True
 BP_Door_C.HLOD=True
@@ -1385,6 +1390,19 @@ BP_CollectibleBase_C.Actor=True
 BP_CollectibleBase_C.Input=True
 BP_CollectibleBase_C.WorldPartition=True
 BP_CollectibleBase_C.HLOD=True
+BP_Key_C.Default=True
+BP_Key_C.Tick=True
+BP_Key_C.Replication=True
+BP_Key_C.Rendering=True
+BP_Key_C.Collision=True
+BP_Key_C.Actor=True
+BP_Key_C.Input=True
+BP_Key_C.WorldPartition=True
+BP_Key_C.HLOD=True
+BP_ObjectiveManager_C.TransformCommon=True
+BP_Key_C.TransformCommon=True
+BP_Key_C.LOD=True
+BP_Key_C.Cooking=True
 
 [DetailMultiObjectNodeExpansion]
 EditorStyleSettings=True
@@ -1499,8 +1517,8 @@ Character=
 Pawn=
 InputSettings="\"Object.Bindings.AxisConfig\" \"Object.Bindings.ActionMappings.ActionMappings[3]\" \"Object.Bindings.AxisMappings.AxisMappings[0]\" \"Object.Bindings.AxisMappings.AxisMappings[1]\" \"Object.Bindings.AxisMappings.AxisMappings[2]\" \"Object.Bindings.AxisMappings.AxisMappings[3]\" \"Object.Bindings.AxisMappings.AxisMappings[4]\" \"Object.Bindings.AxisMappings.AxisMappings[5]\" \"Object.Console.ConsoleKeys\" "
 CameraComponent="\"Object.PostProcess.PostProcessSettings\" "
-SceneComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
-ActorComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+SceneComponent=
+ActorComponent=
 BP_PlayerController_C=
 PlayerController=
 Controller=
@@ -1574,6 +1592,10 @@ WBP_ObjectiveUI_C=
 BP_Door_C=
 BP_TriggerPlayerBase_C=
 BP_TriggerBase_C=
+BP_CollectibleBase_C=
+SetObjective_11="\"Struct.L_finalString\" "
+SetObjective="\"Struct.L_finalString\" "
+ToDoubleDigits_3=
 
 [ContentBrowser]
 ContentBrowserDrawer.SourcesExpanded=True
@@ -1627,26 +1649,26 @@ ContentBrowserTab1.ThumbnailSize=2
 ContentBrowserTab1.CurrentViewType=1
 
 [ContentBrowserRecent]
-MRUItem0=/Game/LDis/Triggers/_Base/BP_CollectibleBase
-MRUItem1=/Game/LDis/Triggers/BP_Door
-MRUItem2=/Game/Interfaces/IObjectiveTarget
-MRUItem3=/Game/_Core/BP_GameFlowManager
-MRUItem4=/Game/Objectives/BP_ObjectiveManager
-MRUItem5=/Game/Objectives/_Widgets/WBP_ObjectiveUI
-MRUItem6=/Game/Objectives/_Enums/EObjectiveManagerState
-MRUItem7=/Game/Objectives/_Structs/FObjectiveData
-MRUItem8=/Game/Levels/bootstrap
-MRUItem9=/Game/Player/BP_Player
-MRUItem10=/Game/Levels/Level_01
-MRUItem11=/Game/_Core/BP_StartPosition
-MRUItem12=/Game/Levels/Level_03
-MRUItem13=/Game/Levels/Level_02
-MRUItem14=/Game/_Core/_Widgets/WBP_GameFlowUI
-MRUItem15=/Game/Levels/Level_Gym
-MRUItem16=/Game/_Core/_Data/_Material/M_StartPosition
-MRUItem17=/Game/_Core/_Enums/EGameState
-MRUItem18=/Game/LDis/GravityTargets/BP_StickyPlatform
-MRUItem19=/Game/LDis/GravityTargets/_Data/Materials/M_StickyPlatform
+MRUItem0=/Game/Levels/bootstrap
+MRUItem1=/Game/Levels/Level_01
+MRUItem2=/Game/LDis/Triggers/BP_Key
+MRUItem3=/Game/LDis/Triggers/_Base/BP_CollectibleBase
+MRUItem4=/Game/LDis/Triggers/BP_Door
+MRUItem5=/Game/Interfaces/IObjectiveTarget
+MRUItem6=/Game/_Core/BP_GameFlowManager
+MRUItem7=/Game/Objectives/BP_ObjectiveManager
+MRUItem8=/Game/Objectives/_Widgets/WBP_ObjectiveUI
+MRUItem9=/Game/Objectives/_Enums/EObjectiveManagerState
+MRUItem10=/Game/Objectives/_Structs/FObjectiveData
+MRUItem11=/Game/Player/BP_Player
+MRUItem12=/Game/_Core/BP_StartPosition
+MRUItem13=/Game/Levels/Level_03
+MRUItem14=/Game/Levels/Level_02
+MRUItem15=/Game/_Core/_Widgets/WBP_GameFlowUI
+MRUItem16=/Game/Levels/Level_Gym
+MRUItem17=/Game/_Core/_Data/_Material/M_StartPosition
+MRUItem18=/Game/_Core/_Enums/EGameState
+MRUItem19=/Game/LDis/GravityTargets/BP_StickyPlatform
 
 [AssetEditorToolkitTabLocation]
 /Game/_Core/BP_GameMode.BP_GameMode=1
@@ -1723,6 +1745,8 @@ bShowBookmarksForCurrentDocumentOnlyInTab=False
 GraphEditorQuickJumps=()
 
 [PlacementMode]
+RecentlyPlaced=/Game/LDis/Triggers/BP_Key.BP_Key;
+RecentlyPlaced=/Game/Objectives/BP_ObjectiveManager.BP_ObjectiveManager;
 RecentlyPlaced=/Game/_Core/BP_StartPosition.BP_StartPosition;
 RecentlyPlaced=/Game/_Core/BP_GameFlowManager.BP_GameFlowManager;
 RecentlyPlaced=/Game/Player/BP_Player.BP_Player;
@@ -1731,7 +1755,6 @@ RecentlyPlaced=/Game/LDis/GravityTargets/BP_Explosion.BP_Explosion;
 RecentlyPlaced=/Game/LDis/GravityTargets/_Base/BP_GravityTargetBase.BP_GravityTargetBase;
 RecentlyPlaced=/Game/LDis/Triggers/BP_HealthZone.BP_HealthZone;
 RecentlyPlaced=/Game/LDis/Triggers/BP_Door.BP_Door;
-RecentlyPlaced=/Game/LDis/Triggers/BP_CollectibleKey.BP_CollectibleKey;
 RecentlyPlaced=/Game/LDis/Triggers/_Base/BP_TriggerPlayerBase.BP_TriggerPlayerBase;
 RecentlyPlaced=/Game/LDis/Triggers/_Base/BP_TriggerBase.BP_TriggerBase;
 
@@ -2725,7 +2748,7 @@ bMaterialQualityUsed[3]=0
 
 [SuppressableDialogs]
 ChangeVariableType_Warning=False
-DeleteVariableInUse_Warning=False
+DeleteVariableInUse_Warning=True
 RemoveLevelWarning=False
 
 [WidgetTemplatesExpanded]
